finish results first draft

--- a/draft/sigproc.bib
+++ b/draft/sigproc.bib
@@ -1,59 +1,24 @@
-@ARTICLE{bowman:reasoning,
-	AUTHOR = "Mic Bowman and Saumya K. Debray and Larry L. Peterson",
-	TITLE = "Reasoning About Naming Systems",
-	JOURNAL = "ACM Trans. Program. Lang. Syst.",
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {795-825},
-	MONTH = "November",
-	YEAR = {1993}	}
+@article{centers2014hiv,
+  title={HIV risk, prevention, and testing behaviors. National HIV Behavioral Surveillance System: men who have sex with men, 20 US cities, 2011. In: HIV surveillance special report 8},
+  author={Centers for Disease Control and Prevention (CDC and others},
+  journal={HIV surveillance special report},
+  volume={8},
+  year={2014}
+}
 
-@ARTICLE{braams:babel,
-	AUTHOR = "Johannes Braams",
-	TITLE = "Babel, a Multilingual Style-Option System for Use with LaTeX's Standard Document Styles",
-	JOURNAL = {TUGboat},
-	VOLUME = {12},
-	NUMBER = {2},
-	PAGES = {291-301},
-	MONTH = "June",
-	YEAR = {1991}	}
+@article{van2008visualizing,
+  title={Visualizing data using t-SNE},
+  author={Van der Maaten, Laurens and Hinton, Geoffrey},
+  journal={Journal of Machine Learning Research},
+  volume={9},
+  number={2579-2605},
+  pages={85},
+  year={2008}
+}
 
-@INPROCEEDINGS{clark:pct,
-	AUTHOR = "Malcolm Clark",
-	TITLE = "Post Congress Tristesse",
-	BOOKTITLE = "TeX90 Conference Proceedings",
-	PAGES = "84-89",
-	ORGANIZATION = "TeX Users Group",
-	MONTH = "March", 
-	YEAR = {1991}	}
-
-@ARTICLE{herlihy:methodology,
-	AUTHOR = "Maurice Herlihy",
-	TITLE = "A Methodology for Implementing Highly Concurrent
-	Data Objects",
-	JOURNAL = {ACM Trans. Program. Lang. Syst.},
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {745-770},
-	MONTH = "November",
-	YEAR = {1993}	}
-
-@BOOK{Lamport:LaTeX,
-	AUTHOR = "Leslie Lamport",
-	TITLE = "LaTeX User's Guide and Document Reference Manual",
-	PUBLISHER = "Addison-Wesley Publishing Company",
-	ADDRESS = "Reading, Massachusetts",
-	YEAR = "1986"	}
-
-@BOOK{salas:calculus,
-	AUTHOR = "S.L. Salas and Einar Hille",
-	TITLE = "Calculus: One and Several Variable",
-	PUBLISHER = "John Wiley and Sons",
-	ADDRESS = "New York",
-	YEAR = "1978"	}
-
-
-
-
-
-
+@article{low2014graphlab,
+  title={Graphlab: A new framework for parallel machine learning},
+  author={Low, Yucheng and Gonzalez, Joseph E and Kyrola, Aapo and Bickson, Danny and Guestrin, Carlos E and Hellerstein, Joseph},
+  journal={arXiv preprint arXiv:1408.2041},
+  year={2014}
+}
