--- a/notebooks/Topic_modeling_on_user-timelines.ipynb
+++ b/notebooks/Topic_modeling_on_user-timelines.ipynb
@@ -27,7 +27,7 @@
     "# load and concatenate tweet timeline-documents\n",
     "import json\n",
     "\n",
-    "train = True\n",
+    "train = False\n",
     "\n",
     "user_timelines = dict()\n",
     "with open('../data/user_timeline_tweets.json') as f_in:\n",
