--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -47,7 +47,12 @@
 
 
 
+
 \documentclass{sig-alternate-05-2015}
+
+\usepackage [english]{babel}
+\usepackage [autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
 
 \begin{document}
 
@@ -141,7 +146,7 @@ Shannon Quinn\titlenote{Corresponding author.}\\
 \maketitle
 \begin{abstract}
 
-Pre-Exposure Prophylaxis (PrEP) is a recently developed therapy for the prevention of Human Immunodeficiency Virus (HIV). The treatment is available as a pill named Truvada and is taken once a day for as much as 99\% protection from infection when exposed to HIV. While medically effective, PrEP suffers from high drug costs, HIV-related social stigma, and under-informed health providers and patients. This paper contributes a data mining and machine learning strategy that monitors Twitter social media data to determine HIV and PrEP discussion trends. Our results show that we can identify PrEP and HIV discussion dynamics over time, and positive and negative PrEP-related tweets. These results can be used by public health professionals to inform and protect at-risk individuals from HIV. 
+Pre-Exposure Prophylaxis (PrEP) is a recently developed therapy for the prevention of Human Immunodeficiency Virus (HIV). The treatment is available as a pill named Truvada and is taken once a day for as much as 99\% protection from infection when exposed to HIV. While medically effective, PrEP suffers from high drug costs, HIV-related social stigma, and under-informed health providers and patients. This paper describes a data mining and machine learning strategy that monitors Twitter social media data to determine HIV and PrEP discussion trends. Our results show that we can identify PrEP and HIV discussion dynamics over time, and positive and negative PrEP-related tweets. These results can be used by public health professionals to inform and protect at-risk individuals from HIV. 
 
 %These methods may also be useful to identify and preempt HIV outbreaks before they reach epidemic levels.
 
@@ -174,7 +179,7 @@ Pre-Exposure Prophylaxis (PrEP) is a recently developed therapy for the preventi
 \keywords{ Social Media, Topic Modelling, Document Embedding}
 
 \section{Introduction}
-Example citation (needed right now to compile):\cite{Lamport:LaTeX}
+Example citation (needed right now to compile):
 
 Introduce and literature review of:
 1) PrEP, HIV, Twitter
@@ -206,14 +211,14 @@ Introduce and literature review of:
 
 
 
-We sought to determine trends in HIV and PrEP discourse on twitter, to inform and coordinate public health efforts aiming to promote PrEP adoption and adherence for at-risk individuals. We collected 624,569 tweets containing at least one of the following words 'HIV', 'AIDS', 'truvada', 'prophylaxis', 'imtesting', 'PrEP' from Twitter's streaming API. The tweets were restricted to English language, and the collection dates spanned from the 47th week of 2015 to the 14th week of 2016. The tweets were and cleaned of exotic characters.
+We sought to determine trends in HIV and PrEP discourse on twitter to inform and coordinate public health efforts aiming to promote PrEP adoption and adherence for at-risk individuals. We collected 624,569 tweets containing at least one of the following words 'HIV', 'AIDS', 'truvada', 'prophylaxis', 'imtesting', 'PrEP' from Twitter's streaming API. The tweets were restricted to English language, and the collection dates spanned from the 47th week of 2015 to the 14th week of 2016. The tweets were and cleaned of exotic characters. Before performing topic analysis, we excluded words that were mentioned fewer than 10 times, or more than 0.3 times the number of documents. We also performed Term Frequency Inverse Document Frequency (TF-IDF) normalization.
 
-We excluded tweets that did not originate in contiguous United States time zones. A subset of the tweets we collected had geolocation data available. We found that tweets were largely concentrated on US and Canadian metro areas (Figure 1).
+We excluded tweets that did not originate in contiguous United States time zones. 14204 of the tweets we collected (about 2\%) had geolocation coordinates available. We found that tweets were largely concentrated on US and Canadian metro areas (Figure 1). The tweets did not seem to be over represented in any geographical region of the US.
 
 
 \begin{figure}
 \centering
-\includegraphics[height=2.5in, width=3.5in]{map}
+\includegraphics[height=3in, width=4in]{map}
 \caption{Plot of geolocated tweets.}
 \end{figure}
 
@@ -221,7 +226,7 @@ We excluded tweets that did not originate in contiguous United States time zones
 
 The first analysis that we performed sought to identify certain keywords, hashtags, tweets and users, that were discussed in HIV and PrEP related contexts. Word2Vec and the related method, Paragraph2Vec are unsupervised machine learning methods that have performed well at embedding natural language in a semantic vector space. In our analysis, Word2Vec allows us to determine semantically similar words to a query word, while Paragraph2Vec allows us to determine similar tweets, users and hashtags to a query hashtag.
 
-We trained a Word2Vec model, and queried for the top 10 word-vectors related to the term PrEP (Table 1). We found several HIV related events, WorldAIDSDay, HLM2016AIDS, ICASA2015, as well as the PrEP drug Truvada, and the term HIV. In addition, we found the acronym ART which refers to Anti-Retroviral Therapy. DoingIt, and OneConversation, are ongoing efforts led by the Center for Disease Control (CDC) to spread awareness and reduce the spread of HIV. NBHAAD is an organization that is committed to increasing awareness for HIV within the Black community (TODO: look up if there is some special connection between HIV and Black community). Nancy Reagan, who died in early 2016, was mentioned in conjunction with her efforts to combat HIV in the 1980's. Together these results show us a high-level view of the important components of the national PrEP conversation on Twitter.
+We trained a Word2Vec model, and queried for the top 10 word-vectors related to the term PrEP (Table 1). We found several HIV/AIDS related events, WorldAIDSDay, HLM2016AIDS, ICASA2015, as well as the PrEP drug Truvada, and the term HIV. In addition, we found the acronym ART which refers to Anti-Retroviral Therapy. DoingIt, and OneConversation, are ongoing efforts led by the Center for Disease Control (CDC) to spread awareness and reduce the spread of HIV. NBHAAD is an organization that is committed to increasing awareness for HIV within the Black community. Nancy Reagan, who died in early 2016, was mentioned in conjunction with her efforts to combat HIV in the 1980's. Together these results show us a high-level view of the important components of the national PrEP conversation on Twitter.
 
 % table 1 - w2v PrEP
 \begin{table}
@@ -242,9 +247,9 @@ OneConversation & 0.688427\\ \hline
 \hline\end{tabular}
 \end{table}
 
-Doc2Vec allows us to identify the top users, tweets, and hashtags associated with \#prep. Note that on Twitter, hashtags are not case sensitive. Querying for the top 10 document-level entities associated with \#prep, we again see several PrEP and HIV related hashtags including \#hiv, \#hivprevention, \#truvada, and \#whereisprep. We also see a LGBT-related hashtag, \#lgbtmedia16, which indicates a distinct awareness of PrEP in the Gay community. This may reflect the known levels of HIV transmission in gay men (TODO: cite something here).
+Doc2Vec allows us to identify the top users, tweets, and hashtags associated with \#prep. Note that on Twitter, hashtags are not case sensitive. Querying for the top 10 document-level entities associated with \#prep, we again see several PrEP and HIV related hashtags including \#hiv, \#hivprevention, \#truvada, and \#whereisprep. We also see a LGBT-related hashtag, \#lgbtmedia16, which indicates a distinct awareness of PrEP in the Gay community. This may reflect the known levels of HIV transmission in men who have sex with men~\cite{centers2014hiv}.
 
-Interestingly, we also found 3 tweets and 1 user in the top 10 doc2vec results for \#prep. Tweet 702179860983189504 has content spreading HIV prevention awareness: "\#StoneColdVideoTODAY if You see this 13 symptoms. Do HIV Test Immediately. Must Read". Conversely tweet 708519265540907010 has content that calls into doubt the usefulness of PrEP: "Checkout why PrEP is hurting the cause \& \#JoinTheConversation \#LGBTQIA". User 711275699529764864 is a twitter spam bot with no particular connection to PrEP. Together the Doc2Vec results show that we can monitor and identify PrEP-related hashtags and tweets. The most PrEP related tweets, the content of the above tweets were popular on twitter over the period of data that we collected. When they were retweeted, doc2vec weighted them more highly similar to \#prep. Thus with this method we demonstrate a way to identify and monitor the most viral tweets related to PrEP. As the discussion changes, public health professionals can use this information to quickly identify the most important viral sentiment in the online PrEP conversation.
+Interestingly, we also found 3 tweets and 1 user in the top 10 doc2vec results for \#prep. Tweet 702179860983189504 has content spreading HIV prevention awareness: "\#StoneColdVideoTODAY if You see this 13 symptoms. Do HIV Test Immediately. Must Read". Conversely tweet 708519265540907010 has content that calls into doubt the usefulness of PrEP: "Checkout why PrEP is hurting the cause \& \#JoinTheConversation \#LGBTQIA". User 711275699529764864 appears to be a twitter spam bot with no obvious connection to PrEP. Together the Doc2Vec results show that we can monitor and identify PrEP-related hashtags and tweets. The most PrEP related tweets, the content of the above tweets were popular on twitter over the period of data that we collected. When they were retweeted, doc2vec weighted them more highly similar to \#prep. Thus with this method we demonstrate a way to identify and monitor the most viral tweets related to PrEP. As the discussion changes, public health professionals can use this information to quickly identify the most relevant viral sentiment in the online PrEP conversation.
 
 % table 2 - d2v PrEP
 \begin{table}
@@ -265,9 +270,9 @@ tweet-712032637024653313 & 0.628646 \\ \hline
 \hline\end{tabular}
 \end{table}
 
-Finally we wanted to visualize the relative similarities of these PrEP-related keywords in a low dimensional space. We took several keywords that we had identified in our PrEP related queries, along with other HIV-prevention related terms, and visualised their word-vectors in 2 dimensions using tSNE (Figure 2)(TODO: citation for tSNE.).
+Finally we wanted to visualize the relative similarities of several PrEP-related keywords in a low dimensional space. We took keywords that we had identified in our PrEP related queries, along with other HIV-prevention related terms, and visualised their word-vectors in 2 dimensions using tSNE~\cite{van2008visualizing} (Figure 2.
 
-We several trends. Notably the pharmaceutical based HIV therapies all cluster together (ART, PrEP, truvada), the AIDS awareness events cluster together (WorldAIDSDay, NBHAAD) and so do the sexually transmitted disease keywords (HIV, AIDS, STD). These results may provide another mechanism for researchers to visualize and identify relevant trends in PrEP-related keywords.
+We several trends. Notably the pharmaceutical based HIV therapies all cluster together (ART, PrEP, truvada) and the AIDS awareness events cluster together (WorldAIDSDay, NBHAAD, ICASA2015). Words that are related to HIV discussion, but also used in other contexts (undetectable, testing, awareness) are further away from the HIV/AIDS word-clusters. These results may provide another mechanism for researchers to visualize and identify relevant trends in PrEP-related keywords.
 
 % figure 3
 \begin{figure*}
@@ -278,11 +283,13 @@ We several trends. Notably the pharmaceutical based HIV therapies all cluster to
 
 \subsection{Time Domain}
 
-Next we sought to identify some temporal trends in PrEP related trends. We used Dynamic Topic Modelling (DTM) to identify how certain topics change over time. In DTM, documents are grouped in several corpuses that represent successive points in time. Latent Dirichlet Analysis (LDA) is then performed on each corpus, to extract a topic distribution. The posterior topic distribution from time $t_n$ is used as the prior for time $t_{n+1}$. This lets the model determine a topic model for each time point that is dependent both on the set of tweets from that time point, and on the time point's document distribution. We specified 10 topics and used each week's worth of tweets, over a 30 week period from the 47th week of 2015 to the 14th week of 2016, as our time points.
+Next we sought to identify some temporal trends in PrEP related trends. We used Dynamic Topic Modelling (DTM) to identify how certain topics change over time. In DTM, documents are grouped in several corpuses that represent successive points in time. Latent Dirichlet Analysis (LDA) is performed on each corpus, to extract a topic distribution. The posterior topic distribution from time $t_n$ is used as the prior for time $t_{n+1}$. This lets the DTM model determine a topic model for each time point that is dependent both on the set of tweets from that time point, and on the previous time point's document distribution. We specified 10 topics and used each week's worth of tweets, over a 30 week period from the 47th week of 2015 to the 14th week of 2016, as our time points.
 
-We identified two topics that showed relevant trends. In topic 5 we see that the keyword 'PrEP' increases over time, while 'prevention', 'drug' and 'risk' remain constant (Figure 3). The term 'pill', also from topic 5, declines overtime. These dynamics may indicate that PrEP discussion is becoming more prevalent. Other HIV prevention related words such as 'pill', 'prevention' and 'drug' which serve as a form of negative controls. They are related to PrEP semantically, and are thus in the same topic. Yet the fact that they are not increasing, shows us that the increase in PrEP discussion is PrEP-specific.
+We identified two topics that showed relevant trends. In topic 5 we see that the keyword 'PrEP' increases over time, while 'prevention', 'drug' and 'risk' remain constant (Figure 3). The term 'pill', also from topic 5, declines overtime. These dynamics may indicate that PrEP discussion is becoming more prevalent. This growing trend would be consistent with the fact that while PrEP is still not widely known about among patients and healthcare providers, information about PrEP is slowly building into national awareness.
 
-However, it is hard to tell from these data though, whether the increased level of PrEP discussion is leading to increased levels of informed patients, medical providers, and adherence. It is possible that stigma, and misinformation is leading to greater levels of PrEP discussion on twitter. We will get more specific, granular understanding of the PrEP discourse in our sentiment analysis section below.
+Other HIV prevention related words such as 'pill', 'prevention' and 'drug' serve as a form of negative controls. They are related to PrEP, but also used in other medical contexts. The fact that they are not increasing, shows us that the increase in PrEP discussion is PrEP-specific.
+
+However, it is hard to tell from these data whether the increased level of PrEP discussion is leading to increased levels of informed patients, medical providers, and adherence. It is possible that stigma, and misinformation is leading to greater levels of PrEP discussion on twitter. We will get more specific, granular understanding of the PrEP discourse in our sentiment analysis section below (see section "Sentiment Classification").
 
 % figure 3
 \begin{figure}
@@ -291,7 +298,7 @@ However, it is hard to tell from these data though, whether the increased level 
 \caption{DTM topic 5 (PrEP related topic) word prevalence over time. Date is YYYY-WW.}
 \end{figure}
 
-We found at least one other DTM topic that showed interesting behaviour. We found that topic 4 captured several keywords related to World AIDS Day (Figure 4). We can see that 'WorldAIDSDay', and 'can' peak in the 47th week of 2015 and then decline into 2016. This correlates well with the actual date of World AIDS Day, December 1st. Furthermore, while December 1st is World AIDS day, the whole month of December is AIDS Awareness Month. We can clearly see the words 'raise' and 'awareness' peak later and last longer that the word 'WorldAIDSDay' implying that it is correlated to the whole month of December. While our PrEP investigation isn't specifically interested in World AIDS Day, or AIDS awareness month, this observation validates our ability to accurately identify temporal events using DTM. 
+We found at least one other DTM topic that showed interesting behaviour. We found that topic 4 captured several keywords related to World AIDS Day (Figure 4). We can see that "WorldAIDSDay", and "Can" peak in the 47th week of 2015 and then decline into 2016. This correlates well with the actual date of World AIDS Day, December 1st. Furthermore, while December 1st is World AIDS day, the whole month of December is AIDS Awareness Month. We can clearly see the words 'raise' and 'awareness' peak later and last longer than the word 'WorldAIDSDay' implying that it is correlated to the whole month of December. While our PrEP investigation isn't specifically interested in World AIDS Day, or AIDS Awareness Month, this observation validates our ability to accurately identify temporal events using DTM. 
 
 % figure 4
 \begin{figure}
@@ -300,66 +307,39 @@ We found at least one other DTM topic that showed interesting behaviour. We foun
 \caption{DTM topic 4 (WorldAIDSDay related topic) word prevalence over time. Date is YYYY-WW.}
 \end{figure}
 
-Together, the DTM results demonstrate our ability to extract relevant HIV and PrEP related information from twitter that accurately captures time-dependant fluctuations. Public health professionals should be able to monitor these temporal trends to determine the relative interest in PrEP, and other HIV related keywords as they are discussed over time. This method could even lead to a system for early detection of HIV outbreaks, or other serious developments.
+Together, the DTM results demonstrate our ability to extract relevant HIV and PrEP related information from Twitter that accurately captures time-dependant fluctuations. Public health professionals should be able to monitor these temporal trends to determine the relative interest in PrEP, and other HIV related keywords as they are discussed over time.
 
 \subsection{User Timeline Analysis}
 
-% Prior to topic modelling, tweets were cleaned of high and low frequency words, and transformed by Term Frequency Inverse Document Frequency (TFIDF) processing.
-
-% TODO work this section (re download and re-run) Tuesday
-
-We wanted to identify what Twitter users that mentioned PrEP were discussing in their other tweets. We identified users that were most similar to PrEP according to our Paragraph2Vec results, and downloaded their most recent 3000 tweets. We took the top 400 users that had at least 200 words in the combined tweets of their tweet history. For each user, we concatenated all of their tweets, and performed LDA topic modelling on the set of user-time line documents.
-
-When we examine a clustermap of users vs. topics, we see that the majority of these users are discussing topics 5, 1, and 4 (Figure 5). When we look up the top words in the corresponding topic distributions, we see that topics 1 and 4 seem to be related to republican party politics.
+We wanted to identify what Twitter users that mentioned PrEP were discussing in their other tweets. We identified users that were most similar to PrEP according to our Paragraph2Vec results, and downloaded their most recent 3000 tweets. We took the top 500 users that had at least 200 words in the combined tweets of their tweet history. For each user, we concatenated all of their tweets, and performed LDA topic modelling on the resulting set of user-timeline documents (Figure 5).
 
 % figure 5
 \begin{figure*}
 \centering
-\includegraphics[height=2.5in, width=3.5in]{user_timeline_clustermap}
+\includegraphics[height=2.5in, width=4.5in]{LDA_user_timelines}
 \caption{Clustermap of users vs. topics for the top 400 users related to PrEP.}
 \end{figure*}
 
-% table 3
-\begin{table*}
-\centering
-\caption{Topic modeling on PrEP-related users' timelines.}
-\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|} \hline
-Topic Number & Word 0 & Word 1 & Word 2 & Word 3 & Word 4 & Word 5\\ \hline
-0 & wordpress & dentists & rb & aquarius & faction & reconnect\\ \hline
-1 & empirefox & crooks & csr & payroll & ch & allin\\ \hline
-2 & vdeo & pra & gust & lgbtqia & rail & undetectable\\ \hline
-3 & hivaids & cdcstd & stigma & blacklivesmatter & realestate & getcovered\\ \hline
-4 & nigga & niggas & realdonaldtrump & lmao & cruz & gop\\ \hline
-5 & fertility & infertility & armenia & collage & nig & deactivate\\ \hline
-6 & packaging & buenas & amigo & bu & birthcontrol & reservations \\ \hline
-7 & mga & ka & socialmedia & lang & entrepreneur & naman\\ \hline
-8 & infosec & bigdata & multimedia & stl & fx & malware\\ \hline
-9 & nhsengland & sosa & tw & knitting & worldbank & thtorguk\\ \hline
-\hline\end{tabular}
-\end{table*}
+We performed LDA on the users' timelines using the pyLDAvis python package from graphlab~\cite{low2014graphlab}. We specified 100 topics, and found that only one of them was related to HIV (topic number13, see Figure 5) representing about 2\% of the marginal topic distribution. Topic 13 contained top terms "hivaids", "pepfar", "stigma" and "aidsgov". PEPFAR is a governmental organization, The United States President's Emergency Plan for AIDS Relief, that is focused on combating the spread of AIDS internationally. Interestingly we don't see PrEP in the top 30 terms in topic 13. This indicates that among twitter users that talk about PrEP, HIV is a small part of their discussion, and PrEP an even smaller part of their discussion.
 
+We investigated some of the other major topics from users' timelines, and found discussions of other STD's (topics 20, 29 and 17) and other health related terms (topics 12, and 25). The other health and STD-related topics clustered closely with topic 13 in Principle Component space. Some of the STD-related topics included terms related to LGBTQ, including the social networking platform Gridr in topic 17. Other terms related to STD's include prevention terms such as "CDC", "condoms", and "gettested". Topic 19 is nearby these STD-related topics in Principle Component space, and contains terms related to healthcare and political issues such as "Obamacare" and "ACA" (Affordable Care Act). This connection between HIV and other STD prevention, and political discourse may be relevant in PrEP-based HIV prevention efforts, considering there is in some cases no clear precedent for how preventative therapies like PrEP are covered by health insurance (TODO: find something to cite).
 
-
-Together these results suggest that PrEP users are involved in political discussions, and are internationally focused.
-
-
+One of the top words from the HIV-related topic, topic 13, was the term "stigma", the term "endstigma" was also found in topic 17. Previous studies have shown a variety of stigmas associated and HIV have hampered prevention efforts (TODO: cite something). Our observation of stigma-related terms corroborates that there is some discussion of stigma in the context of HIV on Twitter. Public health professionals may be able use the prevalence of the term "stigma" as a way to monitor the efficacy of efforts to end HIV related stigmas.
 
 \subsection{Sentiment Classification}
 
 % TODO work this section Tuesday (give example positive and negative tweets)
 
-Lastly we trained a classifier to classify the sentiment of HIV and PrEP related tweets either positive or negative. This classifier would allow public health professionals to quickly identify positive and negative PrEP related tweets to guide HIV prevention efforts. We obtained a set of 1.6 million tweets with sentiment labels, either positive or negative from Sanders Analytics (http://www.sananalytics.com/lab/twitter-sentiment/). Then we trained a simple logistic regression classifier on 1.2 million paragraph-vectors from the sentiment dataset. We found that our classifier had an accuracy of 69\% using a portion of the sentiment tweets not used in training, as a validation set.
+Previously, we used analyses to summarize the whole Twitter corpus to produce high level trends. For our final analysis, we sought to get a deeper understanding of the data at the individual tweet level. Thus we trained a classifier to classify the sentiment of HIV and PrEP related tweets either positive or negative. This classifier would allow public health professionals to quickly identify positive and negative PrEP related tweets to guide HIV prevention efforts. We obtained a set of 1.6 million tweets with sentiment labels, either positive or negative from Sanders Analytics (http://www.sananalytics.com/lab/twitter-sentiment/). Then we trained a simple logistic regression classifier on 1.2 million paragraph-vectors from the sentiment dataset. We found that our classifier had an accuracy of 69\% using a portion of the sentiment tweets not used in training, as a validation set.
 
- We chose to use a relatively simple classifier model (logistic regression) and stop training at
-
-We then used this classifier to classify our PrEP related tweets into positive or negative labels. We reported the most positive, and most negative tweets, by log(probability), on our full dataset, and on tweets that specifically mention either 'prep' or 'truvada' (Table 4).
+We chose to use a relatively simple classifier model (logistic regression) and stop training at 20 iterations of stochasic gradient decent over the corpus, because we wanted to prevent the possibility that we over trained on our training data. This was especially important because our training and testing data, while both sets of tweets, were separate datasets. We then used this classifier to classify our PrEP related tweets into positive or negative labels. We identified the most positive, and most negative tweets, by log(probability), on our full dataset, and on tweets that specifically mention either 'prep' or 'truvada'. We provided the text from the top 3 positive and negative tweets from each dataset (Table 3, Table 4).
 
 % do a top positive tweets table (also with tweet ID and log prob of classification)
-% table 4
+% table 3
 \begin{table*}
 \centering
 \caption{Positive Sentiment Tweets.}
-\begin{tabular}{|p{2cm}|p{12cm}|} \hline
+\begin{tabular}{|p{2.5cm}|p{12cm}|} \hline
 Category & Text\\ \hline
 General & "RT TOPublicHealth The Works provides testing for HIV anonymous \& rapid test available . Call 416-392-0520 for more info"\\ \hline
 General & "RT FCAA ejaforg announced 5.4 million in grants to support orgs addressing \#HIV in new \& innovative ways!"\\ \hline
@@ -377,11 +357,11 @@ Truvada specific & "RT EvanJPeterson For \#worldAIDSday my early \#PrEP arcticle
 \end{table*}
 
 % do a top negative tweets table (also with tweet ID and log prob of classification)
-% table 5
+% table 4
 \begin{table*}
 \centering
 \caption{Negative Sentiment Tweets.}
-\begin{tabular}{|p{2cm}|p{12cm}|} \hline
+\begin{tabular}{|p{2.5cm}|p{12cm}|} \hline
 Category & Text\\ \hline
 General & "Also, how fucking vile of Hillary to say. Reagan did fucking NOTHING during the AIDS epidemic until it was too late. What a stupid old hag."\\ \hline
 General & "I wonder why he beat her ass when she was tryna leave like she wasn't gone be running back when she found out she had HIV \& nobody want her"\\ \hline
@@ -398,7 +378,13 @@ Truvada specific & "I think I have conjunctivitis unless truvada cured it overni
 \hline\end{tabular}
 \end{table*}
 
-% there is viable information in the LDA topic modeling on positive and negative tweets
+While the sentiment classification doesn't have perfect accuracy, we can see positive tweets disseminating information about the efficacy and benefits of PrEP related preventions (Table 3). The positive tweets indicate that PrEP public health efforts have had some effect diseminating PrEP information on Twitter. 
+
+The negative tweets may be more important than the positive tweets to guide future public health policy corrections. The negative tweets contain concerns that Truvada may not block HIV transmission in all cases (Table 4). There also seems to be concern that use of Truvada may increase the transmission of non-HIV STDs such as Hepatitis C because PrEP users stop using condoms. This may indicate that public health professionals need to stress that PrEP users should not stop wearing condoms when they spread PrEP related information.
+
+Another negative tweet contains questions over weather Truvada is available as a generic drug. This may indicate that in some cases, patients are aware of PrEP, but do not have access to it, either because it is not avaliable through their healthcare provider, or because it is not affordable.
+
+Finally we see some contention over national political leadership in the effort to prevent HIV. While political discussions can often get heated, especially on Twitter, the contention can harm concerted efforts to provide consent governmental leadership in HIV prevention. Public health officials may consider stressing that unity in health policy at the federal level is important to protect the population from the spread of HIV.
 
 \section{Conclusions}
 
