add references and clean draft

--- a/draft/draft.bib
+++ b/draft/draft.bib
@@ -195,3 +195,13 @@
   year={2003},
   publisher={JMLR. org}
 }
+
+@misc{truvadagenericblog,
+  author = {Ethan, Guillen},
+  title = {When Might Generic Truvada Be Available for PrEP in the US?},
+  journal = {Ethan The Blog},
+  type = {Blog},
+  number = {March 16},
+  year = {2015},
+  howpublished = {\url{http://www.ethantheblog.info/?p=50}
+}
